--- a/index_awh.html
+++ b/index_awh.html
@@ -4,8 +4,7 @@
     <head></head>
     <body>
         <h1>1.Review the lesson</h1>
-        <p>Le langage de programmation awk est un outil 
-            adapte au traitement de fichiers textes.</p>
+        <p>The AWK programming language is a tool adapted for text file processing.</p>
 
     </body>
 </html>
