--- a/index_sed.html
+++ b/index_sed.html
@@ -4,8 +4,7 @@
     <head></head>
     <body>
         <h1>1.Review the lesson</h1>
-        <p>La commande sed (stream editor) est un editeur de texte non interactif.
-            Elle permet d'automatiser le traitement de fichiers texte
+        <p>sed is a non-interactive stream editor: it reads input line by line and applies predefined commands.
         </p>
     </body>
 </html>
