--- a/index_shell_101.html
+++ b/index_shell_101.html
@@ -4,9 +4,8 @@
     <head></head>
     <body>
         <h1>1.Review the lesson</h1>
-        <p>Le shell permet de definir ou redefinir des variables. Ces variables 
-            conditionnent l'environnement de travail de l'utilisateur.
+        <p>Shell allows defining or redefining variables. These variables determine the working environment.
             </p>
-        <p>Il est egalement possible de definir des variables utilisateur.</p>
+        <p>It is also possible to define user variables.</p>
     </body>
 </html>
