--- a/array_list_java1.html
+++ b/array_list_java1.html
@@ -23,8 +23,8 @@ class MostExpensive {
     expenses.add(10.57);
     expenses.add(81.37);
     
-    for (int i=0 ; i <= expenses.length; i++) {
-      System.out.println(expenses[i]);
+    for (int i=0 ; i <= expenses.size(); i++) {
+      System.out.println(expenses.get(i);
                       }
     
   }
