--- a/array_list_java1.html
+++ b/array_list_java1.html
@@ -3,12 +3,13 @@
 
 <html>
   <head>
+    <title>Making Sens of Java</title>
     
   </head>
 
   <body>
     <h1>Loop over an ArrayList</h1>
-    <h2>Review the concept</h2>
+    <h2>1.Review the concept</h2>
     <pre><code>
       
 import java.util.ArrayList;
@@ -30,5 +31,9 @@ class MostExpensive {
   }
   
 }</code></pre>
+
+    <h2>2.Guided Practice</h2>
+
+    <h3>3.Exercises</h3>
   </body>
 </html>
