--- a/sql_table_1.html
+++ b/sql_table_1.html
@@ -8,11 +8,16 @@
     <p>CREATE is the basic SQL command to create an element.</p>
 
     <h2>2.Guided Practice</h2>
-    <pre><code>CREATE TABLE Tarifs (idTarif       INTEGER, 
+    <pre><code>
+CREATE TABLE Tarifs (idTarif       INTEGER, 
                      hotel         INTEGER, 
                      typeChambre   INTEGER, 
                      DateDebut     DATE, 
                      DateFin       DATE, 
                      Prix          MONEY); </code></pre>
+
+    <h2>2.Guided Practice</h2>
+
+    <h2>3.Check your understanding</h2>
   </body>
 </html>
