--- a/index_awh.html
+++ b/index_awh.html
@@ -3,8 +3,15 @@
 <html>
     <head></head>
     <body>
-        <h1>1.Review the lesson</h1>
-        <p>The AWK programming language is a tool adapted for text file processing.</p>
+        <h1>AWK</h1>
+<h2>1.Review the lesson</h2>
 
+        <h2>2.Guided practice</h2>
+
+        <pre><code>
+            $ ps -ef | awk '{print $1}'
+        </code></pre>
+
+        <h3>3.Check your understanding</h3>
     </body>
 </html>
