--- a/index_sed.html
+++ b/index_sed.html
@@ -3,8 +3,17 @@
 <html>
     <head></head>
     <body>
-        <h1>1.Review the lesson</h1>
-        <p>sed is a non-interactive stream editor: it reads input line by line and applies predefined commands.
-        </p>
+        <h2>1.Review the lesson</h2>
+
+
+        <h2>2.Guided Practice</h2>
+
+        <p>To search for a string in a file, what syntax should you use?</p>
+
+        <ul><li> sed /string/ file </li>
+        <li> sed -n /string/p file </li></ul>
+        
+
+        <h2>3.Check your understanding</h2>
     </body>
 </html>
